FIX permissions problem

--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -36,5 +36,6 @@ ADD ./startup.sh /opt/startup.sh
 
 RUN sed -i 's/\r//g' /opt/startup.sh
 CMD ["/bin/bash","/opt/startup.sh"]
+RUN chown -R www-data:www-data /var/www
 
 EXPOSE 9000
